[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Pixel Health Bar/Bar/empty health bar.png" type="Texture" id=1]
[ext_resource path="res://assets/Pixel Health Bar/Health/health.png" type="Texture" id=2]
[ext_resource path="res://assets/Pixel Health Bar/Health/no health.png" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/Pixel Health Bar/Health/DarkerHealth.png" type="Texture" id=5]
[ext_resource path="res://assets/Stamina Bar/stamina_under.png" type="Texture" id=6]
[ext_resource path="res://assets/Stamina Bar/stamina.png" type="Texture" id=7]
[ext_resource path="res://assets/Tile assets/light.png" type="Texture" id=8]
[ext_resource path="res://assets/Stamina Bar/bar_2.0.png" type="Texture" id=9]
[ext_resource path="res://assets/Stamina Bar/stamina2.0.png" type="Texture" id=10]
[ext_resource path="res://assets/Stamina Bar/stamina_darker.png" type="Texture" id=11]
[ext_resource path="res://assets/Pixel Health Bar/Health/health under.png" type="Texture" id=12]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="HealthBarUnder" type="TextureProgress" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 1000.0
value = 50.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthBarOver" type="TextureProgress" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 1000.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 7 )

[node name="UpdateTween" type="Tween" parent="Node2D"]

[node name="StaminaBar" type="Node2D" parent="."]
position = Vector2( 32, 44 )
scale = Vector2( 2.5, 1.5 )

[node name="StaminaBar" type="TextureProgress" parent="StaminaBar"]
margin_bottom = 40.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="ShakeTween" type="Tween" parent="StaminaBar"]

[node name="BloodBar" type="Node2D" parent="."]
position = Vector2( 694, -2.38419e-07 )
scale = Vector2( 2.5, 2.5 )

[node name="BloodBarUnder" type="TextureProgress" parent="BloodBar"]
light_mask = 2
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )

[node name="BloodBarOver" type="TextureProgress" parent="BloodBar"]
light_mask = 2
margin_right = 40.0
margin_bottom = 40.0
value = 50.0
texture_progress = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="BloodBar"]
light_mask = 2
position = Vector2( 64, 9 )
texture = ExtResource( 8 )
texture_scale = 0.24
energy = 3.1
range_height = -768.0
range_item_cull_mask = 2
shadow_item_cull_mask = 2

[node name="UpdateTween" type="Tween" parent="BloodBar"]

[node name="Frequency" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]

[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
